feat: Refactor authentication and authorization flow
- Implement AuthContext for managing user authentication state and roles.
- Create AuthGuard component to protect routes based on user roles.
- Update phone verification page to handle backend integration and error messages.
- Modify layout to include AuthProvider for global authentication state.
- Enhance chat service to fetch conversations and messages from the backend.
- Remove unused approval requests logic and dummy data.
- Update middleware to enforce route protection based on user roles.
- Rename project from CampusVault to ResourceX for branding consistency.
- Add CurrentUserResponse DTO for backend user response structure.
- Update item card component to handle optional fields gracefully.
- Improve API error handling and session management.